<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.casehub</groupId>
  <artifactId>casehub-clinical-parent</artifactId>
  <version>0.2-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>CaseHub Clinical :: Parent</name>
  <description>Clinical trial coordination application — GCP/FDA compliance, multi-site sub-cases</description>

  <modules>
    <module>api</module>
    <module>runtime</module>
  </modules>

  <properties>
    <java.version>21</java.version>
    <maven.compiler.release>${java.version}</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <version.quarkus.platform>3.32.2</version.quarkus.platform>
    <version.io.casehub>0.2-SNAPSHOT</version.io.casehub>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.quarkus.platform</groupId>
        <artifactId>quarkus-bom</artifactId>
        <version>${version.quarkus.platform}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-clinical-api</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-work</artifactId>
        <version>${version.io.casehub}</version>
      </dependency>
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-ledger</artifactId>
        <version>${version.io.casehub}</version>
      </dependency>
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-qhorus-api</artifactId>
        <version>${version.io.casehub}</version>
      </dependency>
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-qhorus</artifactId>
        <version>${version.io.casehub}</version>
      </dependency>
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-connectors-core</artifactId>
        <version>${version.io.casehub}</version>
      </dependency>
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-engine</artifactId>
        <version>${version.io.casehub}</version>
      </dependency>
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-engine-scheduler-quartz</artifactId>
        <version>${version.io.casehub}</version>
      </dependency>
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-engine-work-adapter</artifactId>
        <version>${version.io.casehub}</version>
      </dependency>
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-engine-testing</artifactId>
        <version>${version.io.casehub}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-engine-persistence-memory</artifactId>
        <version>${version.io.casehub}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-engine-persistence-hibernate</artifactId>
        <version>${version.io.casehub}</version>
      </dependency>
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-engine-common</artifactId>
        <version>${version.io.casehub}</version>
      </dependency>
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-engine-ledger</artifactId>
        <version>${version.io.casehub}</version>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>3.27.3</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>6.0.3</version>
        <scope>test</scope>
      </dependency>
      <!-- In-memory ledger repository — for @QuarkusTest isolation (no DB table required) -->
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-ledger-memory</artifactId>
        <version>${version.io.casehub}</version>
        <scope>test</scope>
      </dependency>
      <!-- Platform shared types — PreferenceKey, SingleValuePreference, Preferences SPI -->
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-platform-api</artifactId>
        <version>${version.io.casehub}</version>
      </dependency>
      <!-- Platform YAML preference backend — backs SponsorNotificationRetryPolicy -->
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-platform-config</artifactId>
        <version>${version.io.casehub}</version>
      </dependency>
      <!-- Platform expression engine — JQEvaluator required by casehub-engine (engine#316) -->
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-platform-expression</artifactId>
        <version>${version.io.casehub}</version>
      </dependency>
      <!-- Platform @DefaultBean mocks — MockPreferenceProvider, MockCurrentPrincipal etc. -->
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-platform</artifactId>
        <version>${version.io.casehub}</version>
      </dependency>
      <!-- Platform test fixtures (@Alternative stubs for CurrentPrincipal etc.) -->
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-platform-testing</artifactId>
        <version>${version.io.casehub}</version>
        <scope>test</scope>
      </dependency>
      <!-- JPA-backed CaseMemoryStore — @ApplicationScoped, displaces NoOpCaseMemoryStore by classpath presence -->
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-platform-memory-jpa</artifactId>
        <version>${version.io.casehub}</version>
      </dependency>
      <!-- In-memory CaseMemoryStore — @Alternative @Priority(1) for @QuarkusTest isolation -->
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-platform-memory-inmem</artifactId>
        <version>${version.io.casehub}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <repositories>
    <repository>
      <id>github</id>
      <url>https://maven.pkg.github.com/casehubio/*</url>
      <snapshots><enabled>true</enabled></snapshots>
    </repository>
  </repositories>

  <distributionManagement>
    <repository>
      <id>github</id>
      <name>casehubio GitHub Packages</name>
      <url>https://maven.pkg.github.com/casehubio/clinical</url>
    </repository>
  </distributionManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.15.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.5.5</version>
          <configuration>
            <rerunFailingTestsCount>2</rerunFailingTestsCount>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
